BUGFIX dropdown overflow pas forcement ouf

--- a/assets/sass/Secretariat/administration_semester.scss
+++ b/assets/sass/Secretariat/administration_semester.scss
@@ -2,11 +2,13 @@
 
 .table-scrollable {
     display:block;
-    overflow-x: auto;
     white-space: nowrap;
-
-
+    overflow-x: auto;
+    /* hack to let the dropdown overflow the table */
+    padding-bottom: 350px;
+    margin-bottom: -350px;
 }
+
 table i {
    vertical-align: middle;
 }
